test: 실패하던 테스트 스위트 복구
@SpringBootTest 컨텍스트 로드가 깨지던 문제와 서비스 cascade 삭제 리팩터와
어긋나 있던 단위 테스트를 함께 정리한다.

- application-test.properties: OAuth/OpenAI/Gemini/LemonSqueezy/Coupang/Apple 등
  @Value placeholder에 더미 값 공급, H2를 MySQL 모드로 전환, Flyway 비활성화
- TestAwsStubConfig: test 프로파일용 S3Client·S3Presigner 스텁 Bean 추가
- RecipeServiceTest 등: DB cascade로 이관된 서비스 호출 기대 제거

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>